restructuring of c code and concurrency

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
         "new": "cpp",
         "list": "cpp",
         "unordered_map": "cpp",
-        "set": "cpp"
+        "set": "cpp",
+        "__config": "cpp",
+        "semaphore": "cpp"
     }
 }
